
syntax = "proto3";

message SymbolItem {
  string ticker = 1;
  string name = 2;
  double price = 3;
  double change_percent_24h = 4;
}
