
syntax = "proto3";

import "SymbolItem.proto";

message SymbolsSnapshot {
  repeated SymbolItem items = 1;
}
